# cmcc-cloud-alive

./: .env.example  .gitignore  README.md  pyproject.toml
cmcc_cloud_alive/: core.py  kpi_hooks.py  main.py  product_pin.py  scg_route.py  spice_protocol.py  token.py  zte_cag.py  zte_cag_mux.py  zte_cag_proxy.py  zte_connect_params.py  zte_raw_spice.py  zte_route.py
cmcc_cloud_alive/webui/: app.py  orchestrator.py
cmcc_cloud_alive/webui/static/: app.css  app.js  index.html
docs/: README.md  USER_GUIDE.md  delivery-handoff.md  final-acceptance-report.md
notes/: execution_plan.md
tests/: test_cli.py  test_interactive_boot_args.py  test_subaccount_login.py  test_zte_cag_mux_proxy.py
